Kubernetes/simple-ingress-nginx.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gems-frontend-ingress
  namespace: kong
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: gateway.cwg.stratbore.com
      http:
        paths:
        - path: /
          backend:
            serviceName: kong-proxy
            servicePort: 80
    - host: www.cwg.stratbore.com
      http:
        paths:
            - path: /
              backend:
                serviceName: gems-website-service
                servicePort: 80
    - host: www.stratbore.com
      http:
        paths:
            - path: /
              backend:
                serviceName: gems-website-service
                servicePort: 80
    - host: app-basic.cwg.stratbore.com
      http:
        paths:
            - path: /
              backend:
                serviceName: frontend-simple-service
                servicePort: 80
